[package]
name = "rtk-qxwz"
version = "0.1.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
driver = { path = "../driver" }
serial-port = { path = "../serial-port" }
base64 = "*"
async-std = "*"

gnss = { path = "../gnss", optional = true }
monitor-tool = { path = "../monitor-tool-rs", optional = true, default-features = false }

[features]
display = ["monitor-tool/client", "gnss"]

[[bin]]
name = "example"
required-features = ["display"]
